[metadata]
name = example-pkg-YOUR-USERNAME-HERE
version = 0.1
author = Ed Snible
author_email = snible@us.ibm.com
description = distributed traces to data frames
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hindfoot/traceframe
project_urls =
    Bug Tracker = https://github.com/hindfoot/traceframe/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
# package_dir =
#    = src
packages = find:
python_requires = >=3.6

# [options.packages.find]
# where = src

